--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ let purchasedSkins = [];
 // ====== SKINS ======
 const skins = [
 {id:1,name:"Default",img:"https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png",cost:0},
-{id:2,name:"Skin 1",cost:10000,img:"https://i.postimg.cc/d7hZXDtL/photo-1-2025-09-16-13-48-10.jpg",bonus:{clickMult:1.1,autoMult:1}},
+{id:2,name:"Skin 1",cost:10000,img:"https://i.postimg.cc/Q9pCQYSJ/photo-1.png",bonus:{clickMult:1.1,autoMult:1}},
 {id:3,name:"Skin 2",cost:25000,img:"https://i.postimg.cc/4HgKm5v9/photo-2-2025-09-16-13-48-10.jpg",bonus:{clickMult:1.25,autoMult:1}},
 {id:4,name:"Skin 3",cost:50000,img:"https://i.postimg.cc/0MmMk3Sv/photo-3-2025-09-16-13-48-10.jpg",bonus:{clickMult:1.5,autoMult:1}},
 {id:5,name:"Skin 4",cost:120000,img:"https://i.postimg.cc/RJLWfHGb/photo-4-2025-09-16-13-48-10.jpg",bonus:{clickMult:1,autoMult:2}},
@@ -333,3 +333,4 @@ loadPlayer();
 </script>
 </body>
 </html>
+
