--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 .skin-info { color:#00ffd5; font-size:14px; font-weight:bold; }
 .selected-badge { display:inline-block; margin-top:6px; padding:4px 8px; background:#00ffd5; color:#000; border-radius:8px; font-weight:bold; font-size:12px; }
 #topStatsContainer { margin-top:40px; text-align:left; max-width:400px; margin-left:auto; margin-right:auto; }
+/* Консоль */
+#console { display:none; position:fixed; bottom:0; left:0; width:100%; background:#111; color:#0f0; font-family:monospace; max-height:300px; overflow-y:auto; padding:10px; box-sizing:border-box; z-index:9999; }
+#consoleOutput { white-space:pre-wrap; margin-bottom:5px; }
+#consoleInput { width:100%; padding:5px; font-family:monospace; background:#000; color:#0f0; border:none; outline:none; }
 </style>
 </head>
 <body>
@@ -50,72 +54,35 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 <div id="message"></div>
 <div id="topStatsContainer"></div>
 
+<!-- Консоль -->
+<div id="console">
+  <div id="consoleOutput"></div>
+  <input id="consoleInput" type="text" placeholder="Введите команду...">
+</div>
+
 <!-- Firebase (optional) -->
 <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-database-compat.js"></script>
 
 <script>
-// ====== FIREBASE (OPTIONAL) ======
 const firebaseConfig = {
-    apiKey: "ВАШ_API_KEY",
-    authDomain: "ВАШ_ДОМЕН.firebaseapp.com",
-    databaseURL: "https://ВАШ_ДОМЕН.firebaseio.com",
-    projectId: "ВАШ_ДОМЕН",
-    storageBucket: "ВАШ_ДОМЕН.appspot.com",
-    messagingSenderId: "ВАШ_ID",
-    appId: "ВАШ_APPID"
+  apiKey: "AIzaSyCTPqupywSBU4S5inETk8p-tQFMe3Dx4tE",
+  authDomain: "coin-2e819.firebaseapp.com",
+  projectId: "coin-2e819",
+  storageBucket: "coin-2e819.firebasestorage.app",
+  messagingSenderId: "701106957724",
+  appId: "1:701106957724:web:dfba4d3ce63521afb1ec59"
 };
-
 let firebaseEnabled = true;
 try {
-    if (!firebaseConfig.apiKey || firebaseConfig.apiKey.includes("ВАШ_")) {
-        firebaseEnabled = false;
-        console.warn("Firebase config содержит заглушки. Работаю в локальном режиме (localStorage).");
-    } else {
-        firebase.initializeApp(firebaseConfig);
-    }
-} catch (e) {
-    firebaseEnabled = false;
-    console.warn("Firebase не инициализирован, работаем локально:", e);
-}
-
-const dbAdapter = {
-    async setPlayer(id, payload) {
-        if (firebaseEnabled) {
-            try {
-                await firebase.database().ref("players/" + id).set(payload);
-                return true;
-            } catch (e) {
-                firebaseEnabled = false;
-            }
-        }
-        const all = JSON.parse(localStorage.getItem("players_db") || "{}");
-        all[id] = payload;
-        localStorage.setItem("players_db", JSON.stringify(all));
-        return true;
-    },
-    async getAllPlayers() {
-        if (firebaseEnabled) {
-            try {
-                const snapshot = await firebase.database().ref("players").once("value");
-                return snapshot.val() || {};
-            } catch (e) { firebaseEnabled = false; }
-        }
-        return JSON.parse(localStorage.getItem("players_db") || "{}");
-    },
-    async getPlayer(id) {
-        const all = await this.getAllPlayers();
-        return all[id] || null;
-    }
-};
+    if (!firebaseConfig.apiKey || firebaseConfig.apiKey.includes("ВАШ_")) firebaseEnabled = false;
+    else firebase.initializeApp(firebaseConfig);
+} catch(e){ firebaseEnabled=false; }
 
 // ====== GLOBAL DATA ======
-let ruina = 0, baseClick = 1, baseAuto = 0;
-let upgradeCost = 50, autoClickCost = 20000;
-let selectedSkin = 1, autoInterval = null, playerID = null;
-let purchasedSkins = [];
+let ruina=0, baseClick=1, baseAuto=0, upgradeCost=50, autoClickCost=20000, selectedSkin=1, autoInterval=null, playerID=null, purchasedSkins=[];
 
-const skins = [
+const skins=[
 {id:1,name:"Default",img:"https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png",cost:0},
 {id:2,name:"Skin 1",cost:10000,img:"https://i.postimg.cc/Q9pCQYSJ/photo-1.png",bonus:{clickMult:1.1,autoMult:1}},
 {id:3,name:"Skin 2",cost:25000,img:"https://i.postimg.cc/4HgKm5v9/photo-2-2025-09-16-13-48-10.jpg",bonus:{clickMult:1.25,autoMult:1}},
@@ -126,175 +93,67 @@ const skins = [
 ];
 
 function generateID(){ return String(Math.floor(100000+Math.random()*900000)); }
-
-function loadOrCreatePlayerID(){
-    let id = localStorage.getItem("playerID");
-    if(!id){ id = generateID(); localStorage.setItem("playerID", id); }
-    return id;
-}
-
-function getBalance(id){ return Number(localStorage.getItem("ruina_"+id) || "0"); }
+function loadOrCreatePlayerID(){ let id=localStorage.getItem("playerID"); if(!id){id=generateID(); localStorage.setItem("playerID",id);} return id; }
+function getBalance(id){ return Number(localStorage.getItem("ruina_"+id)||0); }
 function setBalance(id,val){ localStorage.setItem("ruina_"+id, Math.max(0, Math.round(val))); }
+function savePlayer(){ localStorage.setItem("ruina_"+playerID, ruina); localStorage.setItem("ruinaData_"+playerID, JSON.stringify({baseClick, baseAuto, upgradeCost, autoClickCost, selectedSkin, purchasedSkins})); }
+function showMsg(text,t=3000){ const m=document.getElementById("message"); m.innerText=text; if(msgTimeout) clearTimeout(msgTimeout); msgTimeout=setTimeout(()=>m.innerText="",t);} let msgTimeout=null;
 
+// ====== LOAD PLAYER ======
 function loadPlayer(){
-    playerID = loadOrCreatePlayerID();
-    document.getElementById("playerId").innerText = "ID: " + playerID;
-
-    const saved = JSON.parse(localStorage.getItem("ruinaData_"+playerID) || "{}");
-
-    baseClick = saved.baseClick ?? 1;
-    baseAuto = saved.baseAuto ?? 0;
-    upgradeCost = saved.upgradeCost ?? 50;
-    autoClickCost = saved.autoClickCost ?? 20000;
-    selectedSkin = saved.selectedSkin ?? 1;
-    purchasedSkins = saved.purchasedSkins ?? [1];
-
-    ruina = getBalance(playerID) || 0;
-
-    const skin = skins.find(s => s.id === selectedSkin);
-    if (skin && document.getElementById("tapButton")) {
-        document.getElementById("tapButton").src = skin.img;
-    }
-
-    updateUI();
-    updateSkins();
-
-    if(baseAuto > 0) startAutoClick();
-}
-
-async function savePlayer(){
-    setBalance(playerID, ruina);
-    localStorage.setItem("ruinaData_"+playerID, JSON.stringify({
-        baseClick, baseAuto, upgradeCost, autoClickCost, selectedSkin, purchasedSkins
-    }));
-
-    try {
-        await dbAdapter.setPlayer(playerID, {
-            ruina, baseClick, baseAuto, selectedSkin, updatedAt: Date.now()
-        });
-    } catch (e) {}
+    playerID=loadOrCreatePlayerID();
+    document.getElementById("playerId").innerText="ID: "+playerID;
+    const saved=JSON.parse(localStorage.getItem("ruinaData_"+playerID)||"{}");
+    baseClick=saved.baseClick??1; baseAuto=saved.baseAuto??0; upgradeCost=saved.upgradeCost??50; autoClickCost=saved.autoClickCost??20000;
+    selectedSkin=saved.selectedSkin??1; purchasedSkins=saved.purchasedSkins??[1];
+    ruina=getBalance(playerID)||0;
+    const skin=skins.find(s=>s.id===selectedSkin); if(skin) document.getElementById("tapButton").src=skin.img;
+    updateUI(); updateSkins(); if(baseAuto>0) startAutoClick();
 }
 
 // ====== UI ======
 function updateUI(){
-    document.getElementById("score").innerText = "RUINA: " + Math.round(ruina);
-    document.getElementById("clickPowerDisplay").innerText = "Click Power: +" + baseClick;
-    document.getElementById("upgradeCost").innerText = upgradeCost;
-    document.getElementById("autoClickLevel").innerText = baseAuto;
-    document.getElementById("autoClickCost").innerText = autoClickCost;
+    let clickMult=1, autoMult=1;
+    const skin=skins.find(s=>s.id===selectedSkin);
+    if(skin?.bonus){ clickMult=skin.bonus.clickMult; autoMult=skin.bonus.autoMult; }
+    document.getElementById("score").innerText="RUINA: "+Math.round(ruina);
+    document.getElementById("clickPowerDisplay").innerText="Click Power: +"+(baseClick*clickMult);
+    document.getElementById("upgradeCost").innerText=upgradeCost;
+    document.getElementById("autoClickLevel").innerText=baseAuto;
+    document.getElementById("autoClickCost").innerText=autoClickCost;
 }
 
 // ====== CLICK ======
-function tap(){
-    let clickMult = 1;
-    const skin = skins.find(s => s.id === selectedSkin);
-    if(skin?.bonus?.clickMult) clickMult = skin.bonus.clickMult;
-
-    ruina += baseClick * clickMult;
-    ruina = Math.max(0, ruina);
-
-    updateUI();
-    savePlayer();
-}
-
-document.getElementById("tapButton").addEventListener("click", tap);
+function tap(){ let clickMult=1; const skin=skins.find(s=>s.id===selectedSkin); if(skin?.bonus) clickMult=skin.bonus.clickMult; ruina+=baseClick*clickMult; updateUI(); savePlayer(); }
+document.getElementById("tapButton").addEventListener("click",tap);
 
 // ====== UPGRADES ======
-document.getElementById("buyUpgradeBtn").addEventListener("click", ()=> {
-    if(ruina >= upgradeCost){
-        ruina -= upgradeCost;
-        baseClick++;
-        upgradeCost = Math.floor(upgradeCost * 1.5);
-        showMsg("Click power upgraded!");
-        updateUI(); savePlayer();
-    } else showMsg("Not enough RUINA!");
-});
-
-document.getElementById("buyAutoClickBtn").addEventListener("click", ()=> {
-    if(ruina >= autoClickCost){
-        ruina -= autoClickCost;
-        baseAuto++;
-        autoClickCost = Math.floor(autoClickCost * 2.5);
-        showMsg("Auto click upgraded!");
-        startAutoClick();
-        updateUI(); savePlayer();
-    } else showMsg("Not enough RUINA!");
-});
-
-function startAutoClick(){
-    if(autoInterval) clearInterval(autoInterval);
-    autoInterval = setInterval(()=>{
-        let autoMult = 1;
-        const skin = skins.find(s => s.id === selectedSkin);
-        if(skin?.bonus?.autoMult) autoMult = skin.bonus.autoMult;
-
-        ruina += baseAuto * autoMult;
-        ruina = Math.max(0, ruina);
-        updateUI(); savePlayer();
-    }, 1000);
-}
+document.getElementById("buyUpgradeBtn").addEventListener("click",()=>{ if(ruina>=upgradeCost){ ruina-=upgradeCost;baseClick++; upgradeCost=Math.floor(upgradeCost*1.5); showMsg("Click power upgraded!"); updateUI(); savePlayer(); }else showMsg("Not enough RUINA!");});
+document.getElementById("buyAutoClickBtn").addEventListener("click",()=>{ if(ruina>=autoClickCost){ ruina-=autoClickCost;baseAuto++; autoClickCost=Math.floor(autoClickCost*2.5); showMsg("Auto click upgraded!"); startAutoClick(); updateUI(); savePlayer(); }else showMsg("Not enough RUINA!");});
+function startAutoClick(){ if(autoInterval) clearInterval(autoInterval); autoInterval=setInterval(()=>{ let autoMult=1; const skin=skins.find(s=>s.id===selectedSkin); if(skin?.bonus) autoMult=skin.bonus.autoMult; ruina+=baseAuto*autoMult; updateUI(); savePlayer(); },1000); }
 
 // ====== SKINS ======
-function updateSkins(){
-    const container = document.getElementById("skins");
-    container.innerHTML = "";
+function updateSkins(){ const container=document.getElementById("skins"); container.innerHTML=""; skins.forEach(s=>{ const btn=document.createElement("div"); btn.className="skin-button"; const owned=purchasedSkins.includes(s.id); const price=owned?0:(s.cost||0); btn.innerHTML=`<img src="${s.img}" class="skin-img" style="${selectedSkin===s.id?'border:2px solid #ff00aa;box-shadow:0 0 20px #ff00aa;':''}" alt="${s.name}"><div class="skin-info">${s.name}<br>${price} RUINA</div>${s.bonus?`<div style="font-size:12px;color:#ff00aa;">Click x${s.bonus.clickMult}, Auto x${s.bonus.autoMult}</div>`:""}${selectedSkin===s.id?'<div class="selected-badge">SELECTED</div>':''}`; btn.onclick=()=>{ if(selectedSkin===s.id){ showMsg("Already selected!"); return;} if(!owned){ if(ruina<s.cost){ showMsg("Not enough RUINA!"); return;} ruina-=s.cost; purchasedSkins.push(s.id);} selectedSkin=s.id; document.getElementById("tapButton").src=s.img; updateUI(); updateSkins(); savePlayer(); showMsg(`Skin changed to ${s.name}`);}; container.appendChild(btn);}); }
 
-    skins.forEach(s=>{
-        const btn = document.createElement("div");
-        btn.className = "skin-button";
-
-        const owned = purchasedSkins.includes(s.id);
-        const price = owned ? 0 : (s.cost || 0);
-
-        btn.innerHTML = `
-        <img src="${s.img}" class="skin-img"
-             style="${selectedSkin===s.id ? 'border:2px solid #ff00aa;box-shadow:0 0 20px #ff00aa;' : ''}" alt="${s.name}">
-        <div class="skin-info">${s.name}<br>${price} RUINA</div>
-        ${s.bonus ? `<div style="font-size:12px;color:#ff00aa;">Click x${s.bonus.clickMult}, Auto x${s.bonus.autoMult}</div>` : ''}
-        ${selectedSkin===s.id ? '<div class="selected-badge">SELECTED</div>' : ''}
-        `;
-
-        btn.onclick = ()=>{
-            if(selectedSkin === s.id){
-                showMsg("Already selected!");
-                return;
-            }
-
-            if(!owned){
-                if(ruina < s.cost){ showMsg("Not enough RUINA!"); return; }
-                ruina -= s.cost;
-                purchasedSkins.push(s.id);
-            }
-
-            selectedSkin = s.id;
-            document.getElementById("tapButton").src = s.img;
-            updateUI(); updateSkins(); savePlayer();
-            showMsg(`Skin changed to ${s.name}`);
-        };
-
-        container.appendChild(btn);
-    });
+// ====== CONSOLE ======
+const playerIdEl=document.getElementById("playerId");
+playerIdEl.addEventListener("dblclick",()=>{ const c=document.getElementById("console"); c.style.display=c.style.display==="none"?"block":"none";});
+document.getElementById("consoleInput").addEventListener("keydown",e=>{ if(e.key==="Enter"){ const cmd=e.target.value.trim(); if(cmd) handleConsoleCommand(cmd); e.target.value=""; }});
+function handleConsoleCommand(cmd){
+    const parts=cmd.split(" "), command=parts[0]; const output=document.getElementById("consoleOutput");
+    function log(text){ output.innerText+=text+"\n"; output.scrollTop=output.scrollHeight;}
+    if(command==="/pay" && parts.length===3){ const id=parts[1], sum=parseInt(parts[2]); if(!isNaN(sum)){ setBalance(id,getBalance(id)+sum); log(`Выдали ${sum} RUINA ID ${id}`); showMsg(`Выдали ${sum} RUINA ID ${id}`); } }
+    else if(command==="/click" && parts.length===3){ const id=parts[1], power=parseInt(parts[2]); if(!isNaN(power)){ const data=JSON.parse(localStorage.getItem("ruinaData_"+id)||"{}"); data.baseClick=power; localStorage.setItem("ruinaData_"+id,JSON.stringify(data)); if(id===playerID){ baseClick=power; updateUI(); } log(`ClickPower ID ${id} = ${power}`); showMsg(`ClickPower ID ${id} = ${power}`); } }
+    else if(command==="/balance" && parts.length===2){ const id=parts[1]; log(`Баланс ID ${id}: ${getBalance(id)} RUINA`); showMsg(`Баланс ID ${id}: ${getBalance(id)} RUINA`); }
+    else if(command==="/changeID" && parts.length===3){ const oldID=parts[1], newID=parts[2]; const data=JSON.parse(localStorage.getItem("ruinaData_"+oldID)||"{}"); const balance=getBalance(oldID); if(data!==null){ localStorage.setItem("ruinaData_"+newID,JSON.stringify(data)); setBalance(newID,balance); localStorage.removeItem("ruinaData_"+oldID); localStorage.removeItem("ruina_"+oldID); if(playerID===oldID){ playerID=newID; localStorage.setItem("playerID",newID); document.getElementById("playerId").innerText="ID: "+playerID;} log(`ID ${oldID} заменён на ${newID}`); showMsg(`ID ${oldID} заменён на ${newID}`); } }
+    else if(command==="/close"){ document.getElementById("console").style.display="none"; }
+    else{ log("Неизвестная команда"); showMsg("Неизвестная команда"); }
 }
 
-// ====== MESSAGE ======
-let msgTimeout = null;
-function showMsg(text,t=3000){
-    const m=document.getElementById("message");
-    m.innerText=text;
-    if(msgTimeout) clearTimeout(msgTimeout);
-    msgTimeout=setTimeout(()=>m.innerText="",t);
-}
+// ====== SAVE ON EXIT ======
+window.addEventListener("beforeunload",()=>{ try{ savePlayer(); }catch(e){} });
 
-// ====== DOUBLE CLICK OPEN CONSOLE ======
-document.getElementById("playerId").addEventListener("dblclick", () => {
-    console.log("Консоль открыта!");
-    debugger;
-});
-
-// Save при выходе
-window.addEventListener("beforeunload", ()=>{ try{ savePlayer();}catch(e){} });
-
-// AUTO START
+// ====== AUTO START ======
 loadPlayer();
 </script>
 </body>
