--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 #topStatsContainer { margin-top:40px; text-align:left; max-width:400px; margin-left:auto; margin-right:auto; }
 
 /* Консоль */
-#console { display:none; position:fixed; bottom:0; left:0; width:100%; background:#111; color:#0f0; font-family:monospace; max-height:300px; overflow-y:auto; padding:10px; box-sizing:border-box; z-index:9999; }
-#consoleOutput { white-space:pre-wrap; margin-bottom:5px; }
+#console { display:none; position:fixed; bottom:0; left:0; width:100%; background:#111; color:#0f0; font-family:monospace; max-height:350px; overflow:hidden; padding:5px 10px; box-sizing:border-box; z-index:9999; }
+#consoleHistory { font-size:12px; color:#0f0; margin-bottom:5px; max-height:50px; overflow-y:auto; border-bottom:1px solid #0f0; padding-bottom:2px; }
+#consoleOutput { white-space:pre-wrap; margin-bottom:5px; max-height:200px; overflow-y:auto; }
 #consoleInput { width:100%; padding:5px; font-family:monospace; background:#000; color:#0f0; border:none; outline:none; }
 </style>
 </head>
@@ -57,6 +58,7 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 
 <!-- Консоль -->
 <div id="console">
+  <div id="consoleHistory">Примеры команд: /pay ID СУММА, /click ID POWER, /autoclick ID LEVEL</div>
   <div id="consoleOutput"></div>
   <input id="consoleInput" type="text" placeholder="Введите команду...">
 </div>
@@ -83,7 +85,7 @@ try {
 
 // ====== GLOBAL DATA ======
 let ruina=0, baseClick=1, baseAuto=0, upgradeCost=50, autoClickCost=20000, selectedSkin=1, autoInterval=null, playerID=null, purchasedSkins=[];
-let msgTimeout=null;
+let msgTimeout=null, commandHistory=[];
 
 const skins=[
 {id:1,name:"Default",img:"https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png",cost:0},
@@ -102,6 +104,7 @@ function getBalance(id){ return Number(localStorage.getItem("ruina_"+id)||0); }
 function setBalance(id,val){ localStorage.setItem("ruina_"+id, Math.max(0, Math.round(val))); }
 function savePlayer(){ localStorage.setItem("ruina_"+playerID, ruina); localStorage.setItem("ruinaData_"+playerID, JSON.stringify({baseClick, baseAuto, upgradeCost, autoClickCost, selectedSkin, purchasedSkins})); }
 function showMsg(text,t=3000){ const m=document.getElementById("message"); m.innerText=text; if(msgTimeout) clearTimeout(msgTimeout); msgTimeout=setTimeout(()=>m.innerText="",t); }
+function addHistory(cmd){ commandHistory.push(cmd); if(commandHistory.length>5) commandHistory.shift(); document.getElementById("consoleHistory").innerText = "Недавние команды: "+commandHistory.join(" | "); }
 
 // ====== LOAD PLAYER ======
 function loadPlayer(){
@@ -142,7 +145,7 @@ function updateSkins(){ const container=document.getElementById("skins"); contai
 // ====== CONSOLE ======
 const playerIdEl=document.getElementById("playerId");
 playerIdEl.addEventListener("dblclick",()=>{ const c=document.getElementById("console"); c.style.display=c.style.display==="none"?"block":"none";});
-document.getElementById("consoleInput").addEventListener("keydown",e=>{ if(e.key==="Enter"){ const cmd=e.target.value.trim(); if(cmd) handleConsoleCommand(cmd); e.target.value=""; }});
+document.getElementById("consoleInput").addEventListener("keydown",e=>{ if(e.key==="Enter"){ const cmd=e.target.value.trim(); if(cmd){ addHistory(cmd); handleConsoleCommand(cmd); } e.target.value=""; }});
 
 function handleConsoleCommand(cmd){
     const parts=cmd.split(" "), command=parts[0]; 
