--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 .skin-info { color:#00ffd5; font-size:14px; font-weight:bold; }
 .selected-badge { display:inline-block; margin-top:6px; padding:4px 8px; background:#00ffd5; color:#000; border-radius:8px; font-weight:bold; font-size:12px; }
 #topStatsContainer { margin-top:40px; text-align:left; max-width:400px; margin-left:auto; margin-right:auto; }
-
 /* Консоль */
-#console { display:none; position:fixed; bottom:0; left:0; width:100%; background:#111; color:#0f0; font-family:monospace; max-height:350px; overflow:hidden; padding:5px 10px; box-sizing:border-box; z-index:9999; }
-#consoleHistory { font-size:12px; color:#0f0; margin-bottom:5px; max-height:50px; overflow-y:auto; border-bottom:1px solid #0f0; padding-bottom:2px; }
-#consoleOutput { white-space:pre-wrap; margin-bottom:5px; max-height:200px; overflow-y:auto; }
+#console { display:none; position:fixed; bottom:0; left:0; width:100%; background:#111; color:#0f0; font-family:monospace; max-height:300px; overflow-y:auto; padding:10px; box-sizing:border-box; z-index:9999; }
+#consoleHistory { font-size:12px; color:#0ff; margin-bottom:5px; white-space:pre-wrap; text-align:left; }
+#consoleOutput { white-space:pre-wrap; margin-bottom:5px; }
 #consoleInput { width:100%; padding:5px; font-family:monospace; background:#000; color:#0f0; border:none; outline:none; }
 </style>
 </head>
@@ -58,7 +57,7 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 
 <!-- Консоль -->
 <div id="console">
-  <div id="consoleHistory">Примеры команд: /pay ID СУММА, /click ID POWER, /autoclick ID LEVEL</div>
+  <div id="consoleHistory">Примеры команд: /pay ID SUM, /click ID POWER, /autoclick ID LEVEL, /balance ID, /changeID OLD_ID NEW_ID, /ban ID</div>
   <div id="consoleOutput"></div>
   <input id="consoleInput" type="text" placeholder="Введите команду...">
 </div>
@@ -79,13 +78,13 @@ const firebaseConfig = {
 };
 let firebaseEnabled = true;
 try {
-    if(!firebaseConfig.apiKey || firebaseConfig.apiKey.includes("ВАШ_")) firebaseEnabled=false;
+    if(!firebaseConfig.apiKey.includes("AIza")) firebaseEnabled=false;
     else firebase.initializeApp(firebaseConfig);
-}catch(e){ firebaseEnabled=false; }
+} catch(e){ firebaseEnabled=false; console.warn("Firebase отключен", e); }
+const db = firebaseEnabled ? firebase.database() : null;
 
 // ====== GLOBAL DATA ======
-let ruina=0, baseClick=1, baseAuto=0, upgradeCost=50, autoClickCost=20000, selectedSkin=1, autoInterval=null, playerID=null, purchasedSkins=[];
-let msgTimeout=null, commandHistory=[];
+let ruina=0, baseClick=1, baseAuto=0, upgradeCost=50, autoClickCost=20000, selectedSkin=1, autoInterval=null, playerID=null, purchasedSkins=[], msgTimeout=null;
 
 const skins=[
 {id:1,name:"Default",img:"https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png",cost:0},
@@ -102,9 +101,12 @@ function generateID(){ return String(Math.floor(100000+Math.random()*900000)); }
 function loadOrCreatePlayerID(){ let id=localStorage.getItem("playerID"); if(!id){id=generateID(); localStorage.setItem("playerID",id);} return id; }
 function getBalance(id){ return Number(localStorage.getItem("ruina_"+id)||0); }
 function setBalance(id,val){ localStorage.setItem("ruina_"+id, Math.max(0, Math.round(val))); }
-function savePlayer(){ localStorage.setItem("ruina_"+playerID, ruina); localStorage.setItem("ruinaData_"+playerID, JSON.stringify({baseClick, baseAuto, upgradeCost, autoClickCost, selectedSkin, purchasedSkins})); }
+function savePlayer(){
+    setBalance(playerID, ruina);
+    localStorage.setItem("ruinaData_"+playerID, JSON.stringify({baseClick, baseAuto, upgradeCost, autoClickCost, selectedSkin, purchasedSkins}));
+    if(firebaseEnabled) db.ref("players/"+playerID).set({ruina, baseClick, baseAuto, selectedSkin, purchasedSkins, updatedAt:Date.now()});
+}
 function showMsg(text,t=3000){ const m=document.getElementById("message"); m.innerText=text; if(msgTimeout) clearTimeout(msgTimeout); msgTimeout=setTimeout(()=>m.innerText="",t); }
-function addHistory(cmd){ commandHistory.push(cmd); if(commandHistory.length>5) commandHistory.shift(); document.getElementById("consoleHistory").innerText = "Недавние команды: "+commandHistory.join(" | "); }
 
 // ====== LOAD PLAYER ======
 function loadPlayer(){
@@ -135,61 +137,39 @@ function tap(){ let clickMult=1; const skin=skins.find(s=>s.id===selectedSkin); 
 document.getElementById("tapButton").addEventListener("click",tap);
 
 // ====== UPGRADES ======
-document.getElementById("buyUpgradeBtn").addEventListener("click",()=>{ if(ruina>=upgradeCost){ ruina-=upgradeCost;baseClick++; upgradeCost=Math.floor(upgradeCost*1.5); showMsg("Click power upgraded!"); updateUI(); savePlayer(); }else showMsg("Not enough RUINA!");});
-document.getElementById("buyAutoClickBtn").addEventListener("click",()=>{ if(ruina>=autoClickCost){ ruina-=autoClickCost;baseAuto++; autoClickCost=Math.floor(autoClickCost*2.5); showMsg("Auto click upgraded!"); startAutoClick(); updateUI(); savePlayer(); }else showMsg("Not enough RUINA!");});
+document.getElementById("buyUpgradeBtn").addEventListener("click",()=>{
+    if(ruina>=upgradeCost){ ruina-=upgradeCost; baseClick++; upgradeCost=Math.floor(upgradeCost*1.5); showMsg("Click power upgraded!"); updateUI(); savePlayer(); }
+    else showMsg("Not enough RUINA!");
+});
+document.getElementById("buyAutoClickBtn").addEventListener("click",()=>{
+    if(ruina>=autoClickCost){ ruina-=autoClickCost; baseAuto++; autoClickCost=Math.floor(autoClickCost*2.5); showMsg("Auto click upgraded!"); startAutoClick(); updateUI(); savePlayer(); }
+    else showMsg("Not enough RUINA!");
+});
 function startAutoClick(){ if(autoInterval) clearInterval(autoInterval); autoInterval=setInterval(()=>{ let autoMult=1; const skin=skins.find(s=>s.id===selectedSkin); if(skin?.bonus) autoMult=skin.bonus.autoMult; ruina+=baseAuto*autoMult; updateUI(); savePlayer(); },1000); }
 
 // ====== SKINS ======
 function updateSkins(){ const container=document.getElementById("skins"); container.innerHTML=""; skins.forEach(s=>{ const btn=document.createElement("div"); btn.className="skin-button"; const owned=purchasedSkins.includes(s.id); const price=owned?0:(s.cost||0); btn.innerHTML=`<img src="${s.img}" class="skin-img" style="${selectedSkin===s.id?'border:2px solid #ff00aa;box-shadow:0 0 20px #ff00aa;':''}" alt="${s.name}"><div class="skin-info">${s.name}<br>${price} RUINA</div>${s.bonus?`<div style="font-size:12px;color:#ff00aa;">Click x${s.bonus.clickMult}, Auto x${s.bonus.autoMult}</div>`:""}${selectedSkin===s.id?'<div class="selected-badge">SELECTED</div>':''}`; btn.onclick=()=>{ if(selectedSkin===s.id){ showMsg("Already selected!"); return;} if(!owned){ if(ruina<s.cost){ showMsg("Not enough RUINA!"); return;} ruina-=s.cost; purchasedSkins.push(s.id);} selectedSkin=s.id; document.getElementById("tapButton").src=s.img; updateUI(); updateSkins(); savePlayer(); showMsg(`Skin changed to ${s.name}`);}; container.appendChild(btn);}); }
 
 // ====== CONSOLE ======
-const playerIdEl=document.getElementById("playerId");
-playerIdEl.addEventListener("dblclick",()=>{ const c=document.getElementById("console"); c.style.display=c.style.display==="none"?"block":"none";});
-document.getElementById("consoleInput").addEventListener("keydown",e=>{ if(e.key==="Enter"){ const cmd=e.target.value.trim(); if(cmd){ addHistory(cmd); handleConsoleCommand(cmd); } e.target.value=""; }});
+const consoleEl=document.getElementById("console");
+const consoleOutput=document.getElementById("consoleOutput");
+const consoleHistory=document.getElementById("consoleHistory");
+document.getElementById("playerId").addEventListener("dblclick",()=>{ consoleEl.style.display=consoleEl.style.display==="none"?"block":"none";});
+document.getElementById("consoleInput").addEventListener("keydown",e=>{
+    if(e.key==="Enter"){ const cmd=e.target.value.trim(); if(cmd){ handleConsoleCommand(cmd); consoleHistory.innerText=cmd+"\n"+consoleHistory.innerText; } e.target.value=""; }
+});
 
-function handleConsoleCommand(cmd){
-    const parts=cmd.split(" "), command=parts[0]; 
-    const output=document.getElementById("consoleOutput");
-    function log(text){ output.innerText+=text+"\n"; output.scrollTop=output.scrollHeight;}
-
-    if(command==="/pay" && parts.length===3){
-        const id=parts[1], sum=parseInt(parts[2]);
-        if(!isNaN(sum)){
-            let current=getBalance(id);
-            current+=sum;
-            setBalance(id,current);
-            if(id===playerID){ ruina=current; updateUI(); }
-            log(`Выдали ${sum} RUINA ID ${id}`);
-            showMsg(`Выдали ${sum} RUINA ID ${id}`);
-        }
-    }
-    else if(command==="/click" && parts.length===3){
-        const id=parts[1], power=parseInt(parts[2]);
-        if(!isNaN(power)){
-            const data=JSON.parse(localStorage.getItem("ruinaData_"+id)||"{}");
-            data.baseClick=power;
-            localStorage.setItem("ruinaData_"+id,JSON.stringify(data));
-            if(id===playerID){ baseClick=power; updateUI(); }
-            log(`ClickPower ID ${id} = ${power}`);
-            showMsg(`ClickPower ID ${id} = ${power}`);
-        }
-    }
-    else if(command==="/autoclick" && parts.length===3){
-        const id=parts[1], lvl=parseInt(parts[2]);
-        if(!isNaN(lvl)){
-            const data=JSON.parse(localStorage.getItem("ruinaData_"+id)||"{}");
-            data.baseAuto=lvl;
-            localStorage.setItem("ruinaData_"+id,JSON.stringify(data));
-            if(id===playerID){ baseAuto=lvl; startAutoClick(); updateUI(); }
-            log(`AutoClick ID ${id} = ${lvl}`);
-            showMsg(`AutoClick ID ${id} = ${lvl}`);
-        }
-    }
-    else if(command==="/balance" && parts.length===2){
-        const id=parts[1];
-        log(`Баланс ID ${id}: ${getBalance(id)} RUINA`);
-        showMsg(`Баланс ID ${id}: ${getBalance(id)} RUINA`);
-    }
+async function handleConsoleCommand(cmd){
+    const parts=cmd.split(" "), command=parts[0];
+    function log(text){ consoleOutput.innerText+=text+"\n"; consoleOutput.scrollTop=consoleOutput.scrollHeight;}
+    
+    if(command==="/pay" && parts.length===3){ const id=parts[1], sum=parseInt(parts[2]); if(!isNaN(sum)){ const oldVal=getBalance(id); setBalance(id, oldVal+sum); if(id===playerID){ ruina+=sum; updateUI(); } log(`Выдали ${sum} RUINA ID ${id}`); showMsg(`Выдали ${sum} RUINA ID ${id}`); } }
+    else if(command==="/click" && parts.length===3){ const id=parts[1], power=parseInt(parts[2]); if(!isNaN(power)){ const data=JSON.parse(localStorage.getItem("ruinaData_"+id)||"{}"); data.baseClick=power; localStorage.setItem("ruinaData_"+id,JSON.stringify(data)); if(id===playerID){ baseClick=power; updateUI(); } log(`ClickPower ID ${id} = ${power}`); showMsg(`ClickPower ID ${id} = ${power}`); } }
+    else if(command==="/autoclick" && parts.length===3){ const id=parts[1], level=parseInt(parts[2]); if(!isNaN(level)){ const data=JSON.parse(localStorage.getItem("ruinaData_"+id)||"{}"); data.baseAuto=level; localStorage.setItem("ruinaData_"+id,JSON.stringify(data)); if(id===playerID){ baseAuto=level; startAutoClick(); updateUI(); } log(`AutoClick ID ${id} = ${level}`); showMsg(`AutoClick ID ${id} = ${level}`); } }
+    else if(command==="/balance" && parts.length===2){ const id=parts[1]; log(`Баланс ID ${id}: ${getBalance(id)} RUINA`); showMsg(`Баланс ID ${id}: ${getBalance(id)} RUINA`); }
+    else if(command==="/changeID" && parts.length===3){ const oldID=parts[1], newID=parts[2]; const data=JSON.parse(localStorage.getItem("ruinaData_"+oldID)||"{}"); const balance=getBalance(oldID); if(data){ localStorage.setItem("ruinaData_"+newID,JSON.stringify(data)); setBalance(newID,balance); localStorage.removeItem("ruinaData_"+oldID); localStorage.removeItem("ruina_"+oldID); if(playerID===oldID){ playerID=newID; localStorage.setItem("playerID",newID); document.getElementById("playerId").innerText="ID: "+playerID;} log(`ID ${oldID} заменён на ${newID}`); showMsg(`ID ${oldID} заменён на ${newID}`); } }
+    else if(command==="/ban" && parts.length===2){ const id=parts[1]; localStorage.removeItem("ruinaData_"+id); localStorage.removeItem("ruina_"+id); if(id===playerID){ alert("Вы заблокированы!"); location.reload(); } log(`ID ${id} заблокирован`); showMsg(`ID ${id} заблокирован`); }
+    else if(command==="/close"){ consoleEl.style.display="none"; }
     else{ log("Неизвестная команда"); showMsg("Неизвестная команда"); }
 }
 
